# Tanym

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.kk.md  README.md  README.ru.md  SECURITY.md  THIRD_PARTY_NOTICES.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  setup.ps1  setup.sh  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DISTRIBUTION.md  OPEN_SOURCE.md  PERFORMANCE.md  README.md
e2e/: README.md  smoke.spec.ts
scripts/: setup.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/hooks/: useAutoSave.ts  usePlotIndex.ts  usePlotStoryAutoAnalyze.ts  usePopoverPosition.ts  useSceneSummaries.ts
src/lib/: ai-chat-persistence.test.ts  ai-chat-persistence.ts  app-session-reset.ts  constants.ts  desktop-secrets.ts  doc-persistence.ts  file-io.ts  find-utils.ts  migrate-doc-pages.ts  page-layout.ts  page-reflow.ts  platform.ts  plot-story-persistence.test.ts  plot-story-persistence.ts  randomUuid.ts  recent-files.ts  save-docx-workflow.test.ts  save-docx-workflow.ts  table-move.test.ts  table-move.ts  table-sizing.ts  tauri-helpers.ts
src/stores/: aiChatSessionStore.ts  aiStore.test.ts  aiStore.ts  documentStore.ts  fontStore.ts  plotIndexStore.ts  plotStoryProblemPipeline.test.ts  plotStoryStore.test.ts  (+6 more)
(+206 files in other folders)
