[package]
name = "app"
version = "0.1.0"
description = "Tanym — редактор для авторов (Next.js + Tauri)"
authors = ["Kuralbek Adilet <kuralbekadilet475@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qrlbk/Tanym"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
font-kit = "0.14"
# Roadmap фаза 6: health-check локального Ollama (check_ollama_ready).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["time"] }
keyring = "3"
